--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
         top: 3.3vw;
         left: 3.3vw;
         font-size: 3.3vw; } }
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 1020px) {
     .header {
       height: 6vw; }
       .header__logo {
@@ -86,7 +86,7 @@ body {
     @media screen and (min-width: 600px) {
       .footer__link {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .footer__link {
         font-size: 1.281vw; } }
     .footer__link a {
@@ -98,7 +98,7 @@ body {
     @media screen and (min-width: 600px) {
       .footer__ustensils-icon .fas {
         font-size: 2.568vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .footer__ustensils-icon .fas {
         font-size: 1.284vw; } }
   .footer__hands-icon .fas {
@@ -106,10 +106,10 @@ body {
     @media screen and (min-width: 600px) {
       .footer__hands-icon .fas {
         font-size: 1.86vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .footer__hands-icon .fas {
         font-size: 0.93vw; } }
-  @media screen and (min-width: 600px) {
+  @media screen and (min-width: 1020px) {
     .footer {
       padding: 2vw; }
       .footer__logo {
@@ -132,7 +132,7 @@ body {
     @media screen and (min-width: 600px) {
       .location__current i {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .location__current i {
         font-size: 1.281vw; } }
   .location__current p {
@@ -141,7 +141,7 @@ body {
     @media screen and (min-width: 600px) {
       .location__current p {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .location__current p {
         font-size: 1.281vw; } }
 .location__explorate {
@@ -155,7 +155,7 @@ body {
     @media screen and (min-width: 600px) {
       .location__explorate h1 {
         font-size: 4.002vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .location__explorate h1 {
         font-size: 2.001vw; } }
   .location__explorate p {
@@ -164,7 +164,7 @@ body {
     @media screen and (min-width: 600px) {
       .location__explorate p {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .location__explorate p {
         font-size: 1.281vw; } }
   .location__explorate button {
@@ -178,12 +178,15 @@ body {
     @media screen and (min-width: 600px) {
       .location__explorate button {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .location__explorate button {
         font-size: 1.281vw; } }
     @media screen and (min-width: 600px) {
       .location__explorate button {
         padding: 2.8vw 3.5vw; } }
+    @media screen and (min-width: 1020px) {
+      .location__explorate button {
+        padding: 1.4vw 1.8vw; } }
 @media screen and (min-width: 600px) {
   .location__current {
     height: 8vw; }
@@ -197,6 +200,19 @@ body {
       margin-bottom: 2vw; }
     .location__explorate button {
       margin-top: 6vw; } }
+@media screen and (min-width: 1020px) {
+  .location__current {
+    height: 5vw; }
+    .location__current i {
+      margin-right: 1.4vw; }
+    .location__current p {
+      margin-right: 1.8vw; }
+  .location__explorate {
+    padding: 3.2vw 3.2vw 4vw; }
+    .location__explorate h1 {
+      margin-bottom: 1vw; }
+    .location__explorate button {
+      margin-top: 3vw; } }
 
 .help {
   padding: 13.87vw 5.33vw 11.47vw;
@@ -207,7 +223,7 @@ body {
     @media screen and (min-width: 600px) {
       .help__heading {
         font-size: 4.002vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .help__heading {
         font-size: 2.001vw; } }
   .help__explanation {
@@ -224,14 +240,14 @@ body {
       position: relative;
       right: 4%;
       border-radius: 100%;
-      padding: 1vw 2.2vw;
+      padding: 1vw 2vw;
       color: white;
       font-size: 3.2vw;
       margin-right: 2%; }
       @media screen and (min-width: 600px) {
         .help__explanation span {
           font-size: 0.96vw; } }
-      @media screen and (min-width: 600px) {
+      @media screen and (min-width: 1020px) {
         .help__explanation span {
           font-size: 0.96vw; } }
     .help__explanation i {
@@ -240,7 +256,7 @@ body {
       @media screen and (min-width: 600px) {
         .help__explanation i {
           font-size: 1.5vw; } }
-      @media screen and (min-width: 600px) {
+      @media screen and (min-width: 1020px) {
         .help__explanation i {
           font-size: 1.5vw; } }
     .help__explanation p {
@@ -251,7 +267,7 @@ body {
       @media screen and (min-width: 600px) {
         .help__explanation p {
           font-size: 1.708vw; } }
-      @media screen and (min-width: 600px) {
+      @media screen and (min-width: 1020px) {
         .help__explanation p {
           font-size: 1.281vw; } }
     .help__explanation:hover {
@@ -275,9 +291,14 @@ body {
         border-radius: 2vw; }
         .help__explanation span {
           right: 4%;
-          padding: 0.5vw 0.9vw;
+          padding: 0.5vw 0.8vw;
           color: white;
           margin-right: 2%; } }
+  @media screen and (min-width: 1020px) {
+    .help {
+      padding: 3.5vw 1.6vw; }
+      .help__heading {
+        margin-bottom: 2vw; } }
 
 .grid {
   padding: 15.47vw 5.33vw 17.07vw;
@@ -292,7 +313,7 @@ body {
     @media screen and (min-width: 600px) {
       .grid__heading {
         font-size: 4.002vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .grid__heading {
         font-size: 2.001vw; } }
   @media screen and (min-width: 600px) {
@@ -305,6 +326,15 @@ body {
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 1; } }
+  @media screen and (min-width: 600px) {
+    .grid {
+      padding: 4.6vw 1.6vw 5.6vw;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: min-content 1fr;
+      column-gap: 1.2vw; }
+      .grid__heading {
+        grid-column-start: 1;
+        grid-column-end: 5; } }
 
 .restaurant {
   width: 100%;
@@ -330,9 +360,9 @@ body {
     @media screen and (min-width: 600px) {
       .restaurant__new {
         font-size: 1.75vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .restaurant__new {
-        font-size: 1.05vw; } }
+        font-size: 0.875vw; } }
   .restaurant figcaption {
     display: flex;
     flex-direction: column;
@@ -347,27 +377,27 @@ body {
     @media screen and (min-width: 600px) {
       .restaurant__heading {
         font-size: 2.5vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .restaurant__heading {
-        font-size: 1.5vw; } }
+        font-size: 1.25vw; } }
   .restaurant__location {
     font-size: 4.27vw;
     font-family: 'Roboto Thin'; }
     @media screen and (min-width: 600px) {
       .restaurant__location {
         font-size: 2.135vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .restaurant__location {
-        font-size: 1.281vw; } }
+        font-size: 1.0675vw; } }
   .restaurant__like {
     font-size: 7.3vw;
     width: min-content; }
     @media screen and (min-width: 600px) {
       .restaurant__like {
         font-size: 4.015vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .restaurant__like {
-        font-size: 2.19vw; } }
+        font-size: 1.971vw; } }
   @media screen and (min-width: 600px) {
     .restaurant {
       height: 34.1vw;
@@ -379,6 +409,17 @@ body {
         right: 1.7vw;
         padding: 0.7vw 1.5vw;
         border-radius: 0.25vw; } }
+  @media screen and (min-width: 1020px) {
+    .restaurant {
+      height: 17.05vw;
+      border-radius: 1vw; }
+      .restaurant figcaption {
+        padding: 0 1.5vw 0 0.75vw; }
+      .restaurant__new {
+        top: 0.85vw;
+        right: 0.85vw;
+        padding: 0.35vw 0.8vw;
+        border-radius: 0.12vw; } }
 
 .restaurant {
   background-color: #F6F6F6;
@@ -412,7 +453,7 @@ body {
     @media screen and (min-width: 600px) {
       .menu__heading {
         font-size: 4.38vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .menu__heading {
         font-size: 2.19vw; } }
   .menu__like {
@@ -421,7 +462,7 @@ body {
     @media screen and (min-width: 600px) {
       .menu__like {
         font-size: 4.38vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .menu__like {
         font-size: 2.19vw; } }
   .menu__subtitle {
@@ -433,7 +474,7 @@ body {
     @media screen and (min-width: 600px) {
       .menu__subtitle {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .menu__subtitle {
         font-size: 1.281vw; } }
   .menu__green-line {
@@ -457,12 +498,15 @@ body {
     @media screen and (min-width: 600px) {
       .menu__command {
         font-size: 2.562vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .menu__command {
         font-size: 1.281vw; } }
     @media screen and (min-width: 600px) {
       .menu__command {
         padding: 2.8vw 3.5vw; } }
+    @media screen and (min-width: 1020px) {
+      .menu__command {
+        padding: 1.4vw 1.8vw; } }
   @media screen and (min-width: 600px) {
     .menu {
       flex-direction: row;
@@ -508,7 +552,7 @@ body {
     @media screen and (min-width: 600px) {
       .choice__heading {
         font-size: 1.41vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .choice__heading {
         font-size: 1.41vw; } }
   .choice__side {
@@ -518,7 +562,7 @@ body {
     @media screen and (min-width: 600px) {
       .choice__side {
         font-size: 1.2vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .choice__side {
         font-size: 1.2vw; } }
   .choice__price {
@@ -527,7 +571,7 @@ body {
     @media screen and (min-width: 600px) {
       .choice__price {
         font-size: 1.2vw; } }
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 1020px) {
       .choice__price {
         font-size: 1.2vw; } }
   .choice__select {
