--- a/scss/Pages/_index.scss
+++ b/scss/Pages/_index.scss
@@ -54,6 +54,26 @@
             }
         }
     }
+    @include computer-responsive{
+        &__current{
+            height: 5vw;
+            i{
+                margin-right: 1.4vw;
+            }
+            p{
+                margin-right: 1.8vw;
+            }
+        }
+        &__explorate{
+            padding: 3.2vw 3.2vw 4vw;
+            h1{
+                margin-bottom: 1vw; 
+            }
+            button{
+                margin-top: 3vw;
+            }
+        }
+    }
 }
 
 .help{
@@ -77,7 +97,7 @@
             position: relative;
             right: 4%;
             border-radius:100%;
-            padding:1vw 2.2vw;
+            padding:1vw 2vw;
             color: white;
             @include size(exp-number, 0.3);
             margin-right: 2%;
@@ -116,10 +136,16 @@
             border-radius: 2vw;
             span{
                 right: 4%;
-                padding:0.5vw 0.9vw;
+                padding:0.5vw 0.8vw;
                 color: white;
                 margin-right: 2%;
             }
+        }
+    }
+    @include computer-responsive{
+        padding: 3.5vw 1.6vw;
+        &__heading{
+            margin-bottom: 2vw;
         }
     }
 }
@@ -146,6 +172,16 @@
             grid-row-start: 1;
         }       
     }
+    @include tablet-responsive{
+        padding: 4.6vw 1.6vw 5.6vw;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: min-content 1fr;
+        column-gap: 1.2vw;
+        &__heading{
+            grid-column-start: 1;
+            grid-column-end: 5;
+        } 
+    }
 }
 
 
@@ -170,7 +206,7 @@
         background-color: $color-tertiary;
         padding: 1.5vw 3.2vw;
         color: darken($color-tertiary, 45);
-        @include size(new, 0.5);
+        @include size(new, 0.5, 0.25);
     }
     figcaption{
         display: flex;
@@ -183,14 +219,14 @@
     }
     &__heading{
         width: max-content;
-        @include size(restaurant-link, 0.5);
+        @include size(restaurant-link, 0.5, 0.25);
     }
     &__location{
-        @include size(text, 0.5);
+        @include size(text, 0.5, 0.25);
         font-family: 'Roboto Thin';
     }
     &__like{
-        @include size(heart, 0.55);
+        @include size(heart, 0.55, 0.27);
         width:min-content;
     }
     @include tablet-responsive{
@@ -204,6 +240,19 @@
             right: 1.7vw;
             padding: 0.7vw 1.5vw;
             border-radius: 0.25vw;
+        }
+    }
+    @include computer-responsive{
+        height: 17.05vw;
+        border-radius: 1vw;
+        figcaption{
+            padding: 0 1.5vw 0 0.75vw;
+        }
+        &__new{
+            top: 0.85vw;
+            right: 0.85vw;
+            padding: 0.35vw 0.8vw;
+            border-radius: 0.12vw;
         }
     }
 }
