--- a/scss/Utils/_variables.scss
+++ b/scss/Utils/_variables.scss
@@ -1,6 +1,7 @@
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+$color-button: linear-gradient( 0deg, $color-primary, $color-secondary);
 $background-color: #EAEAEA;
 $background-grey:rgba(white, .55);
 $background-grey2:rgba($background-color, .45);
