--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -111,7 +111,25 @@
     }
 }
 
+@keyframes apparition{
+    0%{
+        opacity: 0;
+        transform: translateY(2vw);
+        @include tablet-responsive{
+            transform: translateY(1vw);
+        }
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0vw);
+    }
+}
+
+$anim-dur : 450ms;
+$anim-delay : $anim-dur /2;
+
 .choice{
+    animation: apparition $anim-dur both;
     border-radius: 4vw;
     background-color: white;
     box-shadow: $box-shadow;
@@ -121,14 +139,25 @@
     width:100%;
     margin-bottom: 4vw;
     overflow: hidden;
+    &:hover {
+        transform: scaleX(10%);
+        .choice__select{
+            transform: translateX(0%); 
+        }
+    }
+    @for $i from 1 through 10 {
+        &--#{$i} {
+            animation-delay: $anim-delay * $i;
+        }
+    }
     &__description{
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-content: space-between;
         padding: 3.73vw 3.2vw;
-        width:100%;
         flex-wrap: wrap;
+        transform: scaleX(100%);
     }
     &__heading{
         @include size(choice-heading, 0.3);
@@ -144,11 +173,13 @@
     }
     &__select{
         position: relative;
-        left:16vw;
+        width: 28%;
         height: 100%;
         background-color: $color-tertiary;
         color: white;
-        transform: scaleX(16vw);
+        transform-origin: 100% 50%;
+        transform: translateX(100%); 
+        transition: transform 1000ms;
     }
     @include tablet-responsive{
         height: 7vw;
@@ -159,3 +190,4 @@
         }
     }
 }
+
