--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -20,6 +20,8 @@
 }
 
 @mixin button {
+    position: relative;
+    z-index: 1;
     background: linear-gradient( 0deg, $color-primary, $color-secondary);
     padding: 4.8vw 5.87vw;
     border-radius: 8.53vw;
@@ -32,4 +34,24 @@
     @include computer-responsive{
         padding: 1.4vw 1.8vw;
     }
+    &:hover{
+        &::after{
+            opacity: 1;
+        }
+    }
+    &::after{
+        content:"";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left:0;
+        box-shadow: 0 4vw 4vw #C4C4C4;
+        border-radius: 8.53vw;
+        background: linear-gradient( 0deg, darken($color-primary, 5), darken($color-secondary, 5));
+        opacity: 0;
+        z-index:-1;
+        transition: opacity 250ms;
+    }
 }
+
